k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: recommendations
  labels:
    app: recommendations
spec:
  to:
    kind: Service
    name: recommendations
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
